--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -21,9 +21,8 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
+    border: 0;
+    text-size-adjust: 200%;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -33,7 +32,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
-    font-size: 16pt;
+    font-size: 16px;
     font-family: 'Crimson Text', serif;
 }
 ol, ul {
@@ -53,13 +52,13 @@ table {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 45px;
     text-align: center;
     padding: 40px;
     font-weight: 700;
 }
 h2 {
-    font-size: 1.7rem;
+    font-size: 33px;
     margin-bottom: 0px;
     font-weight: 700;
     padding: 35px;
@@ -71,6 +70,11 @@ h3 {
 }
 h4 {
     font-size: 1.3rem;
+}
+
+div#content {
+    display: flex;
+    flex-direction: column;
 }
 
 div.slide {
@@ -104,15 +108,15 @@ header {
 }
 
 .btn-sign {
-    width: 305px;
+    width: 465px;
     max-width: 100%;
-    margin: 50px auto 20px;
+    margin: 80px auto 60px;
     padding: 16px;
     border: none;
     outline: none;
     display: block;
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 25px;
     line-height: 1.33;
     text-align: center;
     color: #393e41;
@@ -121,15 +125,15 @@ header {
 }
 
 .btn-no {
-    width: 305px;
+    width: 465px;
     max-width: 100%;
-    margin: 20px auto;
+    margin: 30px auto;
     padding: 16px;
     border: none;
     outline: none;
     display: block;
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 25px;
     line-height: 1.33;
     text-align: center;
     color: #b8b5ae;
@@ -143,15 +147,15 @@ input {
     color: -internal-light-dark(black, white);
     letter-spacing: normal;
     word-spacing: normal;
-    width: 405px;
-    max-width: 100%;
+    margin: 20px auto;
+    width: 515px;
+    
+    font-size: 1.8rem;
     text-transform: none;
     text-indent: 0px;
     text-shadow: none;
-    display: inline-block;
+    display: block;
     text-align: start;
     appearance: textfield;
-    font-size: 1.125rem;
     padding: .8125rem 1rem .75rem;
-    margin: 20px auto;
 }
