--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -72,6 +72,14 @@ div.slide-inner {
     margin: auto;
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+}
+
 div.answer {
     cursor:pointer;
     padding: 19px;
