--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -87,10 +87,11 @@ div.answer {
     font-size: 19px;
     margin: 20px;
     background-color: hsla(170, 39%, 100%, 1);
+    
 }
 
 div.progress {
-    font-size: 1.3rem;
+    font-size: 17px;
     padding: 10px;
     text-align: center;
 }
@@ -182,8 +183,8 @@ input {
 }
 img.wood-block {
     position: absolute;
-    z-index: -1;
-    opacity: 0.1;
+    z-index: 2000;
+    opacity: 0.04;
     width: 100%;
     max-width: 700px;
     bottom: 0px;
