--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -130,7 +130,7 @@ button {
 }
 
 .btn-sign {
-    color: #393e41;
+    color: #ffffff;
     background-color: rgb(60, 200, 85);
 }
 
@@ -166,7 +166,7 @@ input {
 .btn-facebook {
     width: 265px;
     max-width: 100%;
-    
+    margin: 0px;
     padding: 14px;
     border: none;
     outline: none;
@@ -233,6 +233,7 @@ h1.well-done {
 
 h2.share-this {
     padding: 30px;
+
 }
 
 @media (max-device-width: 568px), (max-device-height: 700px)
