--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -167,6 +167,7 @@ input {
     width: 265px;
     max-width: 100%;
     margin: 0px;
+    margin-bottom: 20px
     padding: 14px;
     border: none;
     outline: none;
